# sefi

./: .gitignore  CMakeLists.txt  LICENSE  Makefile.manual  README.md  sefi.c  todo
config_example/: item.conf  options.conf
